added link to old site

--- a/index.html
+++ b/index.html
@@ -65,6 +65,13 @@
                 </p>
 
             </div>
+            
+            <hr/>
+            
+            <p>
+                <small><i><a href="https://hackita.hasadna.org.il/">לאתר
+                    הקודם</a></i></small>
+            </p>
 
         </div>
     </div>
