Added some responsiveness

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>
         הכיתה 02 Hackita
     </title>
@@ -13,7 +15,7 @@
 <body class="home">
 
 <div class="main">
-    <div class="row">
+    <div class="row hidden-small">
         <div class="col-xs-6 text-left">
 
             <a href="http://www.hasadna.org.il/"><img height="62"
@@ -31,6 +33,25 @@
                                                   src="images/nli.png"
                                                   alt="הספריה הלאומית"/></a>
         </div>
+    </div>
+    <div class="visible-small">
+
+
+        <a href="http://www.hasadna.org.il/"><img height="40"
+                                                  src="images/sadna-logo.png"
+                                                  alt="הסדנא לידע ציבורי"/>
+            <span class="hasadna-title">
+                הסדנא
+            לידע
+            ציבורי
+            </span></a>
+        <br/>
+
+
+        <a href="http://web.nli.org.il/"><img height="40"
+                                              src="images/nli.png"
+                                              alt="הספריה הלאומית"/></a>
+
     </div>
 
 
@@ -61,13 +82,14 @@
                         הנחיות כאן
                     </a>
                     &bull;
-                    <a href="https://docs.google.com/forms/d/1XrPg3X32EIkImrAnBSgDQOlvjrYr_X-jFOCp1YbrZH4/viewform">טופס הצעת מיזם כאן</a>
+                    <a href="https://docs.google.com/forms/d/1XrPg3X32EIkImrAnBSgDQOlvjrYr_X-jFOCp1YbrZH4/viewform">טופס
+                        הצעת מיזם כאן</a>
                 </p>
 
             </div>
-            
+
             <hr/>
-            
+
             <p>
                 <small><i><a href="https://hackita.hasadna.org.il/">לאתר
                     הקודם</a></i></small>
